--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Assets/style.css">
     <title>Weather Dashboard</title>
 </head>
 <body>
     <header>Weather Dashboard</header>
     <section id="side-bar">
         <p>Search For a City:</p>
-        <input type="text">
+        <input type="text" >
     </section>
+
+
     <section id="current-weather">
-        <h1 id="city"></h1>
-        <p>Temp: </p>
-        <p>Wind: </p>
-        <p>Humidity: </p>
+        <h1 id="city">CITY NAME</h1>
+        <p id="temp">Temp: </p>
+        <p id="wind">Wind: </p>
+        <p id="humidity">Humidity: </p>
     </section>
 
     <section id="five-day forecast">
